# Informatik-Grundlagen-Visual-Computing

./: .gitignore  u01basics.tar  u02fluid.tar
particle-compute/: .gitignore  CMakeLists.txt  README.md  r.ps1
particle-compute/assets/shaders/: compute.glsl  simulateParticles.glsl  writeParticleToImage.glsl
particle-compute/shaders/: frag.glsl  simulateParticles.glsl  writeParticleToImage.glsl
particle-compute/src/: compute.h  main.cpp  particles.h  util.h
u01basics/: CMakeLists.txt  clear_build_files.sh
u01basics/exec/: CMakeLists.txt
u01basics/exec/include/: matrixMath.h
u01basics/exec/src/: main.cpp  matrixMath.cpp
u01basics/libCmdArgs/: CMakeLists.txt
u01basics/libCmdArgs/include/: cmdArgs.h
u01basics/libCmdArgs/src/: cmdArgs.cpp
u02fluid/: CMakeLists.txt
u02fluid/include/: FluidCube.h
u02fluid/src/: FluidCube.cpp  fluid.cpp
u03heat/Z_cout_debbuging_out_files/: correct_loop_out.txt  gprof_output-without.txt
u03heat/benchmark/: results.txt
u03heat/benchmark/mine_with_O3/include/: LaplaceHeat.h
u03heat/benchmark/original_no_O/include/: LaplaceHeat.h
u03heat/benchmark/original_with_O3/: CMakeLists.txt
u03heat/u03heat/: redo.sh  valgrind_cmd.sh
u03heat/u03heat/benchmark/: benchmark.sh
u03heat/u03heat/benchmark/mine_no_O/: CMakeLists.txt
u03heat/u03heat/benchmark/mine_no_O/src/: heat.cpp
u03heat/u03heat/benchmark/mine_with_O3/: CMakeLists.txt
u03heat/u03heat/benchmark/mine_with_Os/: CMakeLists.txt
u03heat/u03heat/benchmark/original_no_O/: CMakeLists.txt
u03heat/u03heat/benchmark/original_no_O/src/: LaplaceHeat.cpp
u03heat/u03heat/benchmark/original_with_O3/src/: heat.cpp
u03heat/u03heat/src/: LaplaceHeat.cpp
u4/: CMakeLists.txt  main.cpp
u4/src/: main.cpp
